err/crotal.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/crotal'...
Compiling './lib/python3.5/site-packages/crotal/db.py'...
***   File "./lib/python3.5/site-packages/crotal/db.py", line 100
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crotal/init'...
Listing './lib/python3.5/site-packages/crotal/lib'...
Listing './lib/python3.5/site-packages/crotal/lib/pinyin'...
Compiling './lib/python3.5/site-packages/crotal/lib/pinyin/main.py'...
***   File "./lib/python3.5/site-packages/crotal/lib/pinyin/main.py", line 9
    print "out: %s" % test.hanzi2pinyin_split(string=string, split="-")
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crotal/models'...
Compiling './lib/python3.5/site-packages/crotal/models/base.py'...
***   File "./lib/python3.5/site-packages/crotal/models/base.py", line 175
    except yaml.YAMLError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crotal-0.9.8.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
